Restore comment